Basic Manifest done

--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,18 @@
     "short_name": "PWA example",
     "start_url": ".",
     "background_color": "#6dcdb1",
-    "theme_color": "#009578"
+    "theme_color": "#009578",
+    "display": "standalone",
+    "icons": [
+        {
+            "src": "images/logo192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "images/logo512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
