--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,15 @@
     "icons": [
         {
             "src": "images/logo192.png",
-            "sizes": "192x192",
-            "type": "image/png"
+            "sizes": "144x144 192x192",
+            "type": "image/png",
+            "purpose": "any"
         },
         {
             "src": "images/logo512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
